<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Product Inventory</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in catalog when current quantity of product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="catalog_update_quantity_product_successful">Current quantity of product updated successfully</string>

    <!-- Toast message in catalog when current quantity of product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="catalog_update_quantity_product_failed">Error with updating current quantity of product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_detail">Product Details</string>
    <!-- Label for Sale button and List view in the editor and catalog activities [CHAR LIMIT=30] -->
    <string name="bt_sale">Sell</string>
    <string name="bt_sell">Sale</string>
    <!-- Label for Order button  in the editor activity [CHAR LIMIT=30] -->
    <string name="bt_order">Order More</string>
    <!-- Label for receive button  in the editor activity [CHAR LIMIT=30] -->
    <string name="bt_modify_quantity">Update Quantity</string>
    <!-- Label for Delete button  in the editor activity [CHAR LIMIT=30] -->
    <string name="bt_delete">Delete Product</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for sold quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_sold_quantity">Sold Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier email id field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_emailid">Email Id</string>


    <!-- Label for name field in the list_item [CHAR LIMIT=30] -->
    <string name="label_product_name">Product Name</string>

    <!-- Label for quantity field in the list_item [CHAR LIMIT=30] -->
    <string name="label_product_quantity">Current Quantity</string>

    <!-- Label for product image on product detail page -->
    <string name="label_product_image">Product Image</string>
    
    <!-- String value for email message to supplier -->
    <string name="hello_message">"Hello " </string>
    <string name="message_1">"It looks like we are running low on "</string>
    <string name="message_2">" and would like to reorder more."</string>
    <string name="message_3">"Regards,"</string>
    <string name="message_4">"Shubham Store Co."</string>



    <!-- Label for price field in the list_item [CHAR LIMIT=30] -->
    <string name="label_product_price">Price</string>

    <!-- Label for sold quantity in the list_item [CHAR LIMIT=30] -->
    <string name="label_product_sold_quantity">Sold Quantity</string>

    <!-- Label for supplier name in the product details [CHAR LIMIT=30] -->
    <string name="label_product_supplier_name">Supplier Name</string>

    <!-- Label for supplier email id in the product details [CHAR LIMIT=30] -->
    <string name="label_product_supplier_emailid">Supplier Email Id</string>

    <!-- Label for supplier email id subject for sending email [CHAR LIMIT=30] -->
    <string name="supplier_request_subject">Reorder Request</string>





</resources>