<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">
            <!--Label for name of the product -->
            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="@string/label_product_name"
                android:textIsSelectable="false"/>
            <!--Label for supplier name of the product -->
            <TextView
                android:id="@+id/label_supplier_name"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="@string/label_product_supplier_name"
                android:textIsSelectable="false"/>
            <!--Label for suppliers email id of the product -->
            <TextView
                android:id="@+id/label_supplier_emailid"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="@string/label_product_supplier_emailid"
                android:textIsSelectable="false"/>
            <!--Label for Price of the product -->
            <TextView
                android:id="@+id/label_price"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="@string/label_product_price"
                android:textIsSelectable="false"/>
            <!--Label for sold quantity of the product -->
            <TextView
                android:id="@+id/label_sold_quantity"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="@string/label_product_sold_quantity"
                android:textIsSelectable="false"/>
            <!--Label for current quantity of the product -->
            <TextView
                android:id="@+id/label_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/label_product_quantity"
                android:textIsSelectable="false"/>
            <!--Label for Image of the product -->
            <TextView
                android:id="@+id/label_product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/label_product_image"
                android:textIsSelectable="false"/>
            <!--Button for sale of the product -->
            <Button
                android:id="@+id/bt_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_sell"
                android:focusable="false"
                />
            <!--Button to update current quantity of the product -->
            <Button
                android:id="@+id/bt_update_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_modify_quantity"
                android:focusable="false"/>
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">
            <!--Textview for name of the product -->
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="Name"
                android:textIsSelectable="false"/>
            <!--Textview for name of supplier of the product -->
            <TextView
                android:id="@+id/supplier_name"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="Sonal"
                android:textIsSelectable="false"/>
            <!--Textview for email address of supplier of the product -->
            <TextView
                android:id="@+id/supplier_emailid"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="sonal.singh2288@gmail.com"
                android:textIsSelectable="false"/>
            <!--TextView for price of the product -->
            <TextView
                android:id="@+id/price"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="2000"
                android:textIsSelectable="false"/>
            <!--TextView for the sold quantity of product -->
            <TextView
                android:id="@+id/sold_quantity"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="20"
                android:textIsSelectable="false"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/bt_increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="+"/>
            <!--Edit Text to update current quantity for the product -->
            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D"
                android:text="200"
                android:inputType="number"
                android:textIsSelectable="false"/>
                <Button
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:id="@+id/bt_decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"/>
            </LinearLayout>
            <!--Image for the product -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_product"
                />
            <!--Button to place order for the product -->
            <Button
                android:id="@+id/bt_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_order"
                android:focusable="false"
                />
            <!--Button to delete product -->
            <Button
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_delete"
                android:focusable="false"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>